# nix-config

./: .envrc  .gitignore  .gitmodules  CLAUDE.md  awg-add-client  awgtool  check-power-inhibitors.sh  config.nix  configuration.nix  cq.toml  ctl  enroll-tpm  flake.nix  globals.nix  hardware-configuration.nix  home-pavel.nix  home-root.nix  hosts.nix  mqtt-controller-proposal.md  rekey  setup  switch  switch-darwin  takeover-host  update-masterkeys  verify-attic  verify-configs  verify-kanata-configs
.github/workflows/: build.yaml
accessible-terminal/: .gitignore  color-optimizer2  color-optimizer2.cu  flake.nix  ghostty-theme-ranker.py  run-optimizer2.sh  theme-analyzer.py
docs/: asterisk-pbx.md  defects.md  deploying-nixos-on-oci-ampere.md  ledgers.yaml  milestones.md  mqtt-devices.md  mqtt-todo.md  zigbee-mg24-coordinator.md
docs/drafts/: 20260415-1200-tass-mqtt-design.md  20260503-1900-ollama-sycl-fork-plan.md  20260504-2030-ollama-bug-report-sycl-engine-sigsegv.md  20260518-1900-zimt-flake-cleanup-prompt.md  20260519-2339-ollama-sycl-l0-roadmap.md  20260602-2312-nix-store-rule-violation.md  20260629-2130-deploying-nixos-on-oci-ampere.md
hosts/o1/: cfg-o1.nix  hardware-configuration.nix
hosts/o2/: cfg-o2.nix  hardware-configuration.nix
hosts/pavel-am5/: cfg-pavel-am5.nix  configuration.nix  hardware-configuration.nix  home-pavel.nix  home-root.nix  monitors.xml  useful.json  vscode-keymap-linux-inQuickInput.json  vscode-keymap-linux-negate.json  vscode-keymap-linux-nocontext.json  vscode-keymap-linux-stickyScrollFocused.json  vscode-keymap-linux-textInputFocus.json  vscode-keymap-linux.json
hosts/pavel-fw/: cfg-pavel-fw.nix  hardware-configuration.nix  home-pavel.nix  home-root.nix  monitors.xml
hosts/pavel-mba-m3/: cfg-pavel-mba-m3.nix  home-pavel.nix
hosts/pavel-trx40/: cfg-pavel-trx40.nix  hardware-configuration.nix  home-pavel.nix
lib/: _imports.nix  lib.nix  mk-agent-harness.nix
modules/: age-dummy.nix  template.nix
patches/: gnome-settings-daemon-ambient-brightness-fixes.patch  gnome-settings-daemon-ambient-brightness-init.patch  gnome-settings-daemon-suspend-loop-fix.patch  mutter-mr-4795-modified.patch
pkg/hue-controller/: Cargo.toml  default.nix  frontend.nix
pkg/hue-controller/crates/hue-controller/: Cargo.toml
pkg/hue-controller/crates/hue-controller/src/: controller.rs  daemon.rs  lib.rs  main.rs  sun.rs  time.rs  topology.rs
pkg/hue-controller/crates/hue-controller/src/config/: actions.rs  catalog.rs  heating.rs  mod.rs  room.rs  scenes.rs  time_expr.rs
pkg/hue-controller/crates/hue-controller/src/controller/: actions.rs  heating.rs  kill_switch.rs  mod.rs  motion.rs  plug.rs  room.rs
pkg/hue-controller/crates/hue-controller/src/domain/: action.rs  event.rs  heating_state.rs  mod.rs  state.rs
pkg/hue-controller/crates/hue-controller/src/mqtt/: mod.rs
pkg/hue-controller/crates/hue-controller/src/provision/: descriptions.rs  devices.rs  mod.rs  names.rs  zwave.rs
pkg/hue-controller/crates/hue-controller/src/web/: decision_capture.rs  mod.rs  server.rs  snapshot.rs
pkg/hue-controller/crates/hue-controller/tests/: e2e_kitchen.rs
pkg/hue-controller/crates/hue-controller/tests/common/: fixtures.rs  mod.rs
pkg/hue-controller/crates/hue-frontend/: Cargo.toml  Trunk.toml  index.html
pkg/hue-controller/crates/hue-frontend/src/: app.rs  main.rs  ws.rs
pkg/hue-controller/crates/hue-frontend/src/components/: event_log.rs  plug_card.rs  room_card.rs
pkg/hue-controller/crates/hue-wire/: Cargo.toml
pkg/hue-controller/crates/hue-wire/src/: lib.rs
pkg/hue-controller/src/: controller.rs  daemon.rs  lib.rs  main.rs  time.rs  topology.rs
pkg/hue-controller/src/config/: actions.rs  catalog.rs  mod.rs  room.rs  scenes.rs
pkg/hue-controller/src/domain/: action.rs  event.rs  state.rs
pkg/hue-controller/src/mqtt/: codec.rs  mod.rs  topics.rs
pkg/hue-controller/src/provision/: client.rs  groups.rs  mod.rs
pkg/hue-controller/tests/: e2e_provision.rs
pkg/hue-controller/tests/common/: fixtures.rs  mod.rs
pkg/hue-controller/tla/: HMC.cfg  HMC.tla  HueController.tla  MC.cfg  MC.tla
pkg/hue-controller/tla/states/26-04-10-13-44-18/: MC-0.st
pkg/mqtt-controller/crates/mqtt-controller-frontend/: Cargo.toml  Trunk.toml  index.html  style.css
pkg/mqtt-controller/crates/mqtt-controller-frontend/src/: app.rs  ws.rs
pkg/mqtt-controller/crates/mqtt-controller-frontend/src/components/: event_log.rs  heating_card.rs  mod.rs  plug_card.rs  room_card.rs  shared.rs  ws_indicator.rs
pkg/nordvpn-wireguard-extractor/: README.md  default.nix  nordvpn_wireguard_extractor.py  pyproject.toml
scripts/: enroll-tpm
tests/: test-llama-cli.sh  test-rootless-podman.sh
(+620 files in other folders)
