[package]
name = "hue-controller"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "Unified zigbee2mqtt provisioner and runtime controller for Hue lights"
license = "MIT"

[[bin]]
name = "hue-controller"
path = "src/main.rs"

[lib]
name = "hue_controller"
path = "src/lib.rs"

[dependencies]
# Async runtime: full feature set so tests can use spawned tasks, channels,
# timers, signal handling, and the multi-threaded scheduler. The binary itself
# only needs a tiny subset but the cost of "full" is negligible at runtime.
tokio = { version = "1", features = ["full"] }

# MQTT client. eclipse-paho is C-based; rumqttc is pure Rust + tokio-native and
# integrates cleanly with the rest of the async stack here.
rumqttc = "0.25"

# Config (de)serialization. The Nix layer will generate JSON; the on-the-wire
# z2m protocol is also JSON. One serde stack covers both.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Local time + IANA timezones for time-of-day slot dispatch (the bento rules
# read the local hour to pick day/night scenes; we need the same).
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
chrono-tz = "0.10"

# Sunrise/sunset calculation for sun-relative schedule expressions.
sunrise = "3"

# CLI parsing. Two subcommands: provision (oneshot reconciler) and daemon
# (long-running runtime controller).
clap = { version = "4", features = ["derive"] }

# Structured logging. tracing-subscriber's env-filter lets us drive log levels
# from RUST_LOG without recompiling.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Error handling: thiserror for typed errors at module boundaries, anyhow for
# the binary's main() catch-all.
thiserror = "2"
anyhow = "1"

# UUID for MQTT client_id uniqueness across reconciler/daemon and across
# reconnects.
uuid = { version = "1", features = ["v4"] }

# Shared wire types for the WebSocket API (server ↔ frontend).
hue-wire = { path = "../hue-wire" }

# HTTP/WebSocket server for the web dashboard. axum is tokio-native.
axum = { version = "0.8", features = ["ws"] }

# Static file serving for the Leptos WASM frontend bundle.
tower-http = { version = "0.6", features = ["fs"] }

# Stream combinators for WebSocket split send/receive.
futures-util = "0.3"

[dev-dependencies]
# Embedded MQTT broker for end-to-end tests. Lets us run the full daemon
# against a real broker without spawning mosquitto from a child process.
rumqttd = "0.19"

# Temp directories for tests that write config JSON to disk and feed it to the
# binary.
tempfile = "3"

# Parametric tests. Lets us express "for each of these {state, event} pairs,
# assert the same invariant" without copy-paste.
rstest = "0.23"

# Better assertion diffs.
pretty_assertions = "1"
