[package]
name = "mqtt-controller-frontend"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "Leptos CSR frontend for the mqtt-controller web dashboard"
license = "MIT"

[dependencies]
mqtt-controller-wire = { path = "../mqtt-controller-wire" }
leptos = { version = "0.7", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3", features = [
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "Location",
    "Window",
    "BinaryType",
] }
wasm-bindgen = "=0.2.114"
js-sys = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
